--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "dependencies": {
         "angular" : "1.2.7",
-        "bootstrap" : "*",
-        "angular-ui-router" : "0.2.7"
+        "bootstrap" : "3.0.3",
+        "angular-ui-router" : "0.2.7",
+        "angular-route": "*"
     }
 }
