--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -5,6 +5,7 @@
         "angular" : "1.2.7",
         "bootstrap" : "3.0.3",
         "angular-ui-router" : "0.2.7",
-        "angular-route": "*"
+        "angular-route": "*",
+        "angular-md5": "*"
     }
 }
